fix(flat): clear floats in toolbars, spacing, keep splitter position

--- a/src/_content-wrap.less
+++ b/src/_content-wrap.less
@@ -745,7 +745,7 @@
         #main:has(&) {
           // hide dijitSplitter between feeds-holder and content-wrap when overlay is active
           > .dijitSplitter {
-            display: none;
+            visibility: hidden;
           }
           #toolbar-frame {
             z-index: 2;
