--- a/src/_prefs.less
+++ b/src/_prefs.less
@@ -168,8 +168,12 @@ body.ttrss_prefs {
   ul.prefs-plugin-list li {
     line-height: unset;
   }
-  :is(.plugin-installer-list, .plugin-updater-list) h3 .material-icons {
-    width: 18px;
+  :is(.plugin-installer-list, .plugin-updater-list) {
+    margin: 0;
+
+    h3 .material-icons {
+      width: 18px;
+    }
   }
 
   // ---------------------------------------------------------------------------
